--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                 </ul>
             </nav>
-            <div class="content">
+            <div class="content justify-content-center">
                 {% block content %}{% endblock %}
             </div>
         </div>
