--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <div class="contacts">
+    <div>
+        {{ current_user.username }}
+        <a href="/logout">выйти</a>
+    </div>
     <div class="list-group contacts__list">
         {% for item in users %}
         <a class="list-group-item btn-outline-primary contacts__item" href="contacts/{{ item }}">
