--- a/templates/login.html
+++ b/templates/login.html
@@ -2,19 +2,24 @@
 
 {% block content %}
     <h2>Вход</h2>
-    <form action="" method="post" novalidate>
-        <div>
-            {{ form.csrf_token }}
+    {% for field, errors in form.errors.items() %}
+    {{ ', '.join(errors) }}
+    {% endfor %}
+    <form class="form-horizontal" method="POST" action="">
+        {{ form.csrf_token() }}
+        <div class="form-group">
+            {{ form.username.label }}
+            {{ form.username(class="form-control") }}
         </div>
-        {% for field in form if field.name != 'csrf_token' %}
-            <div>
-                {{ field.label() }}
-                {{ field() }}
-                {% for error in field.errors %}
-                    <div class="error">{{ error }}</div>
-                {% endfor %}
-            </div>
-        {% endfor %}
+        <div class="form-group">
+            {{ form.password.label }}
+            {{ form.password(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.remember_me.label }}<br>
+            {{ form.remember_me(class="bool")}}
+        </div>
+        {{ form.submit(class="btn btn-primary")}}
+        <a href="registration" class='btn btn-primary btn-log-reg1'>Регистрация</a>
     </form>
-    <a href="registration">Регистрация</a>
 {% endblock %}
