--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,11 +43,63 @@ body {
     border: 1px solid black;
     width: 60px;
     height: 60px;
-    border-radius: 10%;
+    border-radius: 31px;
 }
 
 
 .contacts__name {
     margin-left: 15px;
     color: #ddd;
+}
+
+.btn_switch {
+    display: inline-block;
+    background: #8C959D;
+    color: #fff;
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.log_reg_par {
+    padding: 3px;
+}
+
+.btn_submit {
+    border: 0;
+    border-radius: 5px;
+    background: #4676D7;
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+}
+
+.error {
+    font-size: 8px;
+    padding-left: 50px;
+}
+
+.form-horizontal {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.form-group1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.btn-logout {
+    float: right;
+}
+
+.contacts-stl {
+    display: flex;
+}
+
+.btn-log-reg1 {
+    background: #38b34c;
+    margin-top: 5px;
 }
