--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,7 @@
         <div class="container-fluid">
             <nav class="d-flex justify-content-center py-3 fixed-top navbar-my">
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="/login" class="nav-link active" aria-current="page">Home</a></li>
                 </ul>
             </nav>
             <div class="content justify-content-center">
