--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -8,7 +8,7 @@
     </div>
     <div class="list-group contacts__list">
         {% for item in users %}
-        <a class="list-group-item btn-outline-primary contacts__item" href="contacts/{{ item }}">
+        <a class="list-group-item btn-outline-primary contacts__item" href="contacts/{{ item }}#bottom">
             <img class="contacts__img" src="../static/img/user.jpg" alt="">
             <span class="contacts__name">{{ item }}</span>
         </a>
