--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="contacts">
-    <div>
+    <div class='status'>
         {{ current_user.username }}
         <a href="/logout" class="btn btn-primary btn-logout">Выйти</a>
     </div>
