--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -22,7 +22,7 @@
                 <p class='add-cont-tag'>Контакт</p>
                 <input type="text" name="add_contact" class="form-control add-string" autocomplete='off'>
                 <p class='add-cont-tag'>Сообщение</p>
-                <input type="text" name="cont_message" class="form-control add-string" autocomplete='off'>
+                <input type="text" name="add_message" class="form-control add-string" autocomplete='off'>
             </div>
             <input type="submit" value="Отправить" class='btn btn-primary btn-add'>
             <a href='' class='btn btn-primary btn-add'>Закрыть</a>
