--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,10 @@ body {
     flex-direction: column-reverse;
 }
 
+.conversation::-webkit-scrollbar {
+  width: 0;
+}
+
 .scrollspy-example {
     width: 100%;
 }
